config/ApacheSecureIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /current/site
    cert-manager.io/cluster-issuer: lets-encrypt
  name: podzone-secure-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - musings.thruhere.net
    secretName: musings-cert
  rules:
  - host: musings.thruhere.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: apache-service
            port:
              number: 80
